# comfyui-prompt-composer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
custom-lists/: effect.txt  lens_type.txt  painting_style.txt  photo_style.txt
custom-lists/Clothing/: Complex.txt  Generic.txt
lists/: effects.txt  styles.txt
nodes/: custom_lists.py  effect.py  grouping.py  list_folders.py  merge.py  styler.py  text_multiple.py  text_single.py  utils.py
screenshot/: prompt-composer-base-workflow.json
workflow/: prompt-composer-base-workflow.json  prompt-composer-sdxl-turbo-workflow.json
