[project]
name = "comfyui-prompt-composer"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/florestefano1975/comfyui-prompt-composer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-prompt-composer"
Icon = ""
