[project]
name = "comfyui-prompt-composer"
description = "A suite of tools for prompt management. Combining nodes helps the user sequence strings for prompts, also creating logical groupings if necessary. Individual nodes can be chained together in any order!"
version = "1.7.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/florestefano1975/comfyui-prompt-composer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "florestefano1975"
DisplayName = "Comfyui Prompt Composer"
Icon = ""
